--- a/src/magic/Makefile-depend
+++ b/src/magic/Makefile-depend
@@ -1,95 +1,10 @@
-$(OBJ)/magic.o: magic.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/comm.h ../include/spells.h \
-  ../include/handler.h ../include/db.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/flow_room.h \
-  ../include/fight.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/spell_parser.o: spell_parser.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/spells.h ../include/handler.h \
-  ../include/comm.h ../include/db.h ../include/materials.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/fight.h ../include/screen.h ../include/vendor.h \
-  ../include/prog.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/spells.o: spells.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/comm.h ../include/spells.h \
-  ../include/handler.h ../include/db.h ../include/flow_room.h \
-  ../include/smokes.h ../include/screen.h ../include/vehicle.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/fight.h ../include/materials.h ../include/tokenizer.h \
-  ../include/house.h ../include/player_table.h ../include/events.h \
-  ../include/vendor.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/magic.o : magic.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/char_class.h $(INCLUDE)/flow_room.h $(INCLUDE)/fight.h $(INCLUDE)/obj_data.h 
+	$(CXX) -c $(CXXFLAGS) magic.cc             -o $(OBJ)/magic.o
+$(OBJ)/spell_parser.o : spell_parser.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/materials.h $(INCLUDE)/char_class.h $(INCLUDE)/fight.h $(INCLUDE)/screen.h $(INCLUDE)/tmpstr.h $(INCLUDE)/vendor.h $(INCLUDE)/prog.h 
+	$(CXX) -c $(CXXFLAGS) spell_parser.cc      -o $(OBJ)/spell_parser.o
+$(OBJ)/spells.o : spells.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/flow_room.h $(INCLUDE)/smokes.h $(INCLUDE)/screen.h $(INCLUDE)/vehicle.h $(INCLUDE)/char_class.h $(INCLUDE)/fight.h $(INCLUDE)/materials.h $(INCLUDE)/tokenizer.h $(INCLUDE)/tmpstr.h $(INCLUDE)/house.h $(INCLUDE)/player_table.h $(INCLUDE)/events.h $(INCLUDE)/vendor.h 
+	$(CXX) -c $(CXXFLAGS) spells.cc            -o $(OBJ)/spells.o
 OBJFILES= $(OBJ)/magic.o $(OBJ)/spell_parser.o $(OBJ)/spells.o
