--- a/src/structs/Makefile-depend
+++ b/src/structs/Makefile-depend
@@ -1,224 +1,25 @@
-$(OBJ)/creature.o: creature.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/comm.h ../include/utils.h ../include/spells.h \
-  ../include/handler.h ../include/db.h ../include/help.h \
-  ../include/paths.h ../include/login.h ../include/house.h \
-  ../include/clan.h ../include/security.h ../include/screen.h \
-  ../include/fight.h ../include/player_table.h ../include/prog.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/creature_io.o: creature_io.cc ../include/constants.h ../include/utils.h \
-  ../include/structs.h ../include/defs.h ../include/macros.h \
-  ../include/obj_data.h ../include/xml_utils.h \
-  /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/db.h ../include/comm.h ../include/char_class.h \
-  ../include/actions.h ../include/spells.h ../include/mobact.h \
-  ../include/handler.h ../include/language.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/creature_list.o: creature_list.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/mobile_map.o: mobile_map.cc ../include/mobile_map.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/structs.h ../include/defs.h ../include/macros.h \
-  ../include/constants.h ../include/obj_data.h ../include/xml_utils.h \
-  /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/desc_data.h ../include/editor.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/account.h \
-  ../include/interpreter.h ../include/utils.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/obj_data.o: obj_data.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/handler.h ../include/db.h \
-  ../include/comm.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/object_map.o: object_map.cc ../include/object_map.h ../include/obj_data.h \
-  ../include/defs.h ../include/constants.h ../include/xml_utils.h \
-  /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/macros.h ../include/utils.h ../include/structs.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/player_table.o: player_table.cc ../include/player_table.h \
-  ../include/utils.h ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/db.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/room_data.o: room_data.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/creature.o : creature.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/creature_list.h $(INCLUDE)/interpreter.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/help.h $(INCLUDE)/paths.h $(INCLUDE)/login.h $(INCLUDE)/house.h $(INCLUDE)/clan.h $(INCLUDE)/security.h $(INCLUDE)/fight.h $(INCLUDE)/player_table.h $(INCLUDE)/prog.h 
+	$(CXX) -c $(CXXFLAGS) creature.cc          -o $(OBJ)/creature.o
+$(OBJ)/creature_io.o : creature_io.cc \
+	$(INCLUDE)/constants.h $(INCLUDE)/utils.h $(INCLUDE)/xml_utils.h $(INCLUDE)/db.h $(INCLUDE)/tmpstr.h $(INCLUDE)/comm.h $(INCLUDE)/creature.h $(INCLUDE)/char_class.h $(INCLUDE)/handler.h $(INCLUDE)/language.h 
+	$(CXX) -c $(CXXFLAGS) creature_io.cc       -o $(OBJ)/creature_io.o
+$(OBJ)/creature_list.o : creature_list.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/creature_list.h 
+	$(CXX) -c $(CXXFLAGS) creature_list.cc     -o $(OBJ)/creature_list.o
+$(OBJ)/mobile_map.o : mobile_map.cc \
+	$(INCLUDE)/mobile_map.h $(INCLUDE)/utils.h 
+	$(CXX) -c $(CXXFLAGS) mobile_map.cc        -o $(OBJ)/mobile_map.o
+$(OBJ)/obj_data.o : obj_data.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/comm.h 
+	$(CXX) -c $(CXXFLAGS) obj_data.cc          -o $(OBJ)/obj_data.o
+$(OBJ)/object_map.o : object_map.cc \
+	$(INCLUDE)/object_map.h $(INCLUDE)/utils.h 
+	$(CXX) -c $(CXXFLAGS) object_map.cc        -o $(OBJ)/object_map.o
+$(OBJ)/player_table.o : player_table.cc \
+	$(INCLUDE)/player_table.h $(INCLUDE)/utils.h $(INCLUDE)/db.h 
+	$(CXX) -c $(CXXFLAGS) player_table.cc      -o $(OBJ)/player_table.o
+$(OBJ)/room_data.o : room_data.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/room_data.h 
+	$(CXX) -c $(CXXFLAGS) room_data.cc         -o $(OBJ)/room_data.o
 OBJFILES= $(OBJ)/creature.o $(OBJ)/creature_io.o $(OBJ)/creature_list.o $(OBJ)/mobile_map.o $(OBJ)/obj_data.o $(OBJ)/object_map.o $(OBJ)/player_table.o $(OBJ)/room_data.o
