Player corpses are now !break, can only be looted one item at a time, and impose a small waitstate after each looted item.

--- a/src/magic/Makefile-depend
+++ b/src/magic/Makefile-depend
@@ -24,9 +24,7 @@ $(OBJ)/magic.o: magic.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/spells.h \
-  ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/char_class.h \
+  ../include/handler.h ../include/db.h ../include/char_class.h \
   ../include/actions.h ../include/mobact.h ../include/flow_room.h \
   ../include/fight.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
@@ -56,8 +54,7 @@ $(OBJ)/spell_parser.o: spell_parser.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/spells.h ../include/handler.h \
-  ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/materials.h \
+  ../include/comm.h ../include/db.h ../include/materials.h \
   ../include/char_class.h ../include/actions.h ../include/mobact.h \
   ../include/fight.h ../include/screen.h ../include/vendor.h \
   ../include/prog.h
@@ -88,9 +85,7 @@ $(OBJ)/spells.o: spells.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/spells.h \
-  ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/flow_room.h \
+  ../include/handler.h ../include/db.h ../include/flow_room.h \
   ../include/smokes.h ../include/screen.h ../include/vehicle.h \
   ../include/char_class.h ../include/actions.h ../include/mobact.h \
   ../include/fight.h ../include/materials.h ../include/tokenizer.h \
