players should now be able to loot their own corpses, a couple more related changes can be expected in the next 24 hours once i have a complete system up and running

--- a/src/olc/Makefile-depend
+++ b/src/olc/Makefile-depend
@@ -30,7 +30,7 @@ $(OBJ)/olc.o: olc.cc ../include/structs.h ../include/defs.h ../include/macros.h 
   ../include/smokes.h ../include/paths.h ../include/bomb.h \
   ../include/guns.h ../include/char_class.h ../include/actions.h \
   ../include/mobact.h ../include/events.h ../include/language.h \
-  ../include/mobile_map.h
+  ../include/mobile_map.h ../include/object_map.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/olc_mob.o: olc_mob.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
