We now have a new automated auction system.  The auction channel is now unusable by mortals, but is interplanar.
There is an auctioneer spec and a courier imp spec.
A mortal may auction an item at an auctioneer using the command
auction <item> <amount>

To bid on an item a mortal may use the command:
bid <item number> <amount>

Stats are available on an auctioned item with the command:
bidstat <item number>

Once an item is one, a courier imp will take the item to the winning
bidder anywhere in the world and return the money to the items owner.

--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -147,7 +147,8 @@ $(OBJ)/mobact.o: mobact.cc ../include/structs.h ../include/defs.h \
   ../include/handler.h ../include/spells.h ../include/char_class.h \
   ../include/actions.h ../include/mobact.h ../include/vehicle.h \
   ../include/flow_room.h ../include/guns.h ../include/bomb.h \
-  ../include/fight.h ../include/screen.h ../include/prog.h
+  ../include/fight.h ../include/screen.h ../include/prog.h \
+  ../include/specs.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/vendor.o: vendor.cc ../include/actions.h ../include/interpreter.h \
   ../include/defs.h ../include/spells.h ../include/creature.h \
